<resources>
    <string name="google_map_api_key" translatable="false">AIzaSyDvrfS0HXdZM_HO9Q1Cl1PPUw2JQpBrFcc</string>
    <string name="app_name">QSMobile</string>
    <string name="shared_pref_devicetoken">DeviceToken_QSMobile</string>
    <string name="str_no">NO</string>
    <string name="msg_NO_INTERNET_TITLE">No Internet Connection</string>
    <string name="msg_NO_INTERNET_MSG">First make an Internet Connection!!</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="camera_message">We need permission to access your camera</string>
    <string name="storage_message">We need permission to access your storage</string>
    <string name="denied_message">If you reject permission, you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]</string>
    <string name="call_phone_message">Select Action</string>
    <string name="request_location_permission">We need permission to use location when requested</string>
    <string name="request_call_permission">we need Call permission</string>
    <string name="on_denied_permission">If you reject permission,you can not use this service
        <br />
        Please turn on permissions at [Setting] > [Permission]
    </string>
    <string name="setting">Setting</string>
    <string name="diff_year">year</string>
    <string name="diff_years">years</string>
    <string name="diff_month">month</string>
    <string name="diff_months">months</string>
    <string name="diff_week">week</string>
    <string name="diff_weeks">weeks</string>
    <string name="diff_day">day</string>
    <string name="diff_days">days</string>
    <string name="diff_hour">hour</string>
    <string name="diff_hours">hours</string>
    <string name="diff_minute">minute</string>
    <string name="diff_minutes">minutes</string>
    <string name="diff_second">second</string>
    <string name="diff_seconds">seconds</string>
    <string name="ago">%1$s ago</string>
    <string name="location_msg">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="device_type">android</string>
    <string name="str_msg_touch_id_err">Touch/Face ID is not attached with any user. To attach user with Touch/Face ID, you have to log in with that user. Do you want to attach any user with it?</string>
    <string name="str_fingerprint_not_configured_device">Touch/Face ID is not configured on this device. Please configure it from the Settings.</string>
    <string name="str_email_reset_password">Please check your email to reset your password.</string>
    <string name="str_place_finger_scanner_identify">Set your Touch/Face ID to verify your identity.</string>
    <string name="str_Touch_ID">Touch/Face ID</string>
    <string name="str_fingerprint_not_supported_device">Touch/Face ID is not supported in this device!</string>
    <string name="str_msg_select_company_code_associated">Please select the company code(s) that you are associated with.</string>
    <string name="str_typing">typing…</string>
    <string name="str_qsmobile">QSMobile</string>
    <string name="str_clients">Clients</string>
    <string name="str_employee">Employee</string>
    <string name="str_employees">Employees</string>
    <string name="str_schedule">Schedule</string>
    <string name="str_dashboard">Dashboard</string>
    <string name="str_timesheets">My Timesheets</string>
    <string name="str_service_record">Service Records</string>
    <string name="str_qsmed">QSMed</string>
    <string name="str_setting">Settings</string>
    <string name="str_select_view">Select View</string>
    <string name="str_employee_view">Employee View</string>
    <string name="str_client_view">Client View</string>
    <string name="str_msg_please_wait">Please Wait…</string>
    <string name="msg_server_error">Please Check Your Internet Connection and Try Again</string>
    <string name="msg_press_back_twice">Press back again to exit</string>
    <string name="error_msg_success">Success</string>
    <string name="str_no_shift_msg">Hi Brad Pitt, It looks like you\'ve got a day off!</string>
    <string name="str_no_client_msg">There is no more clients.</string>
    <string name="str_no_contact_msg">No contacts found.</string>
    <string name="str_no_emrg_contact">There is no emergency contact available.</string>
    <string name="error_MSG_ENTER_PHONE_NO">Please enter valid Phone Number: (###) ###-####</string>
    <string name="reg_error_MSG_ENTER_MAIL">Please enter email address</string>
    <string name="reg_error_MSG_ENTER_VALID_MAIL">Please enter valid email address</string>
    <string name="str_select_type">Select Type</string>
    <string name="injection_site">
        <u>Injection Site</u>
    </string>
    <string name="comments_underline">
        <u>Comments</u>
    </string>
    <string name="see_comments">
        <u>See Comments</u>
    </string>
    <string name="view_details">
        <u>View Details</u>
    </string>
    <string name="doctorsContacted">Was the pharmacy and/or doctor contacted?</string>
    <string name="doctorsInstruction">Pharmacy and/or doctor instructions*</string>
    <string name="medicationsInvolved">What medications were involved?*</string>
    <string name="additionalInformation">What additional information or factors contributed to the error?</string>
    <string name="isOnlyReport">Did you only report? <i>(and not cause)</i> the medication error?*</string>
    <string name="isCaseMedicationError">Did you cause the medication error?*</string>
    <string name="view">
        <u>View</u>
    </string>
    <string name="str_showing_open_shift_next_seven_days">Showing open shifts for next 7 days</string>
    <string name="str_find_coverage">Find Coverage</string>
    <string name="str_send_sos">Send SOS</string>
    <string name="str_office">Office</string>
    <string name="str_training_type">Training Type</string>
    <string name="str_secondary_training_type">Secondary Training Type</string>
    <string name="str_all_employees">All Employees</string>
    <string name="str_employment_positions">Employment Positions</string>
    <string name="str_available">Available</string>
    <string name="str_no_open_shiftlist_msg">You currently have no open shifts.</string>
    <string name="str_open_shift_response_submit_success">Open Shift response(s) submitted successfully.</string>
    <string name="str_no_fir_found">No FIR found.</string>
    <string name="str_select_one_more_shift_find_coverage">Please select one or more shifts to find coverage.</string>
    <string name="str_you_cannot_select_separate_clients">You cannot select separate clients. Please deselect and try again.</string>
    <string name="str_you_cannot_find_coverage_non_consecutive_shift">You cannot find coverage for more than one non-consecutive shift at a time. Please deselect and try again.</string>
    <string name="str_note_to_employee_optional">Note to employee(s) (optional)</string>
    <string name="str_gender">Gender</string>
    <string name="str_select_employees_send_message">Please select one or more employees to send an SOS message.</string>
    <string name="str_sos_sent_success">SOS Successfully Sent.</string>
    <string name="str_male_employees_only">Male Employees Only</string>
    <string name="str_female_employees_only">Female Employees Only</string>
    <string name="str_do_you_want_add_comment">Do you want to add a comment?</string>
    <string name="str_please_enter_comments">Please enter comments.</string>
    <string name="birth_date">Birth Date</string>
    <string name="str_note_to_employee">Note to employee</string>
    <string name="error_MSG_ENTER_NAME">Please enter first name</string>
    <string name="error_MSG_ENTER_LAST_NAME">Please enter last name</string>
    <string name="str_image_saved_success">Image saved successfully.</string>
    <string name="str_images_saved_success">Images saved successfully.</string>
    <string name="str_partial_shift_detail">Partial Shift Details</string>
    <string name="str_entered_start_end_time_entire_shift_continue">You have entered the start and end time of the entire shift. Do you wish to continue?</string>
    <string name="str_start_date_time_cant_earlier_shift_start_date_time">Selected start date time can\'t be earlier than shift start date time.</string>
    <string name="str_end_date_time_cant_earlier_shift_end_date_time">Selected end date time can\'t be later than shift end date time.</string>
    <string name="str_which_part_of_shifts_fill">Which part of this shift can you fill?</string>
    <string name="str_sos_tracking">SOS Tracking</string>
    <string name="str_select_employee_fill_shift">Please select an employee to fill the shift.</string>
    <string name="str_cannot_select_more_than_one_employee_fill_shift">You cannot select more than one employee to fill this shift.</string>
    <string name="str_select_employee_fill_all_part_open_shift">You must select an employee that has accepted to fill all or part of the open shift.</string>
    <string name="str_this_shift_partially_filled">This shift has been partially filled.</string>
    <string name="str_this_shift_filled">This shift has been filled.</string>
    <string name="str_accepted">Accepted</string>
    <string name="str_no_reply">No Reply</string>
    <string name="str_fill_shift">Fill Shift</string>
    <string name="str_open_shifts">Open Shifts</string>
    <string name="str_select_all_employees">Select All Employees</string>
    <string name="str_find_coverage_desc">%1$s shift for %2$s on %3$s from %4$s to %5$s</string>
    <string name="str_my_shifts">My Shifts</string>
    <string name="str_qsClock_clock_in_title">Clock-In</string>
    <string name="str_qsClock_clock_in">Clock In</string>
    <string name="str_qsClock_clock_out">Clock Out</string>
    <string name="str_qsClock_title_early_clock_in">Early Clock-In</string>
    <string name="str_qsClock_clock_in_early_title">Clock In Early</string>
    <string name="str_qsClock_clock_in_on_time">Clock In On Time</string>
    <string name="str_qsClock_late_clock_in">Late Clock-In</string>
    <string name="str_qsClock_title_late_clock_out">Late Clock-Out</string>
    <string name="str_qsClock_clock_out_late">Clock Out Late</string>
    <string name="str_qsClock_clock_out_on_time">Clock Out On Time</string>
    <string name="str_qsClock_early_clock_out">Early Clock-Out</string>
    <string name="str_now">Now</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_company">Company Code</string>
    <string name="str_login">Log In</string>
    <string name="str_remember_my_username">Remember my username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="str_face_touch_id">Face/Touch ID</string>
    <string name="str_continue">Continue</string>
    <string name="str_ok">OK</string>
    <string name="str_no_data_found">No data found</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_hint_search">Search here…</string>
    <string name="str_my_caseload">My Caseload</string>
    <string name="str_filter">Filter</string>
    <string name="str_credentials">Credentials</string>
    <string name="str_covid_vaccine_declaration_form">COVID-19 Vaccine Declaration Form</string>
    <string name="str_covid_vaccine_declaration_form_msg">By State Order, all staff are required to have the COVID-19 vaccine in order to continue employment, or you may choose a medical or religious exemption. Please complete the form to let us know what you will choose.</string>
    <string name="str_remind_me_next_time_i_log_in">Remind me next time I log in</string>
    <string name="str_next">Next</string>
    <string name="str_back">Back</string>
    <string name="str_do_you_want_to_upload_proof">Do you want to upload proof of your vaccination now or later?</string>
    <string name="str_later">Later</string>
</resources>