<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rectangle_app_color_radius_8">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/str_covid_vaccine_declaration_form"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/str_covid_vaccine_declaration_form_msg"
            android:textSize="18sp"
            android:textColor="@color/white" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue_rounded_corner_bg"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/str_continue"
            android:textSize="16sp"
            android:textColor="@color/dark_blue" />

        <TextView
            android:id="@+id/tvRemindLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/str_remind_me_next_time_i_log_in"
            android:textSize="16sp"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>