<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:color/transparent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_filter"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/app_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_10" />

    <CheckBox
        android:id="@+id/cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/app_color"
        android:text="@string/str_my_caseload"
        android:textSize="16sp"
        android:button="@drawable/check_box_blue_with_insets"
        android:visibility="visible" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:listitem="@layout/layout_item_list" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_no_data_found"
        android:gravity="center"
        android:visibility="gone" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black_10" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_ok"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:gravity="center" />

</LinearLayout>