<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/inputPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rectangle_white_with_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@null"
            android:hint="@string/str_username"
            android:inputType="text"
            android:textColorHint="@color/border"
            android:textColor="@color/black"
            android:text="tuser3@yopmail.com"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@color/border" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/str_password"
            android:textColorHint="@color/border"
            android:textColor="@color/black"
            android:text="welcome007"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@color/border" />

        <TextView
            android:id="@+id/tvCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:textSize="18sp"
            android:hint="@string/str_company"
            android:textColorHint="@color/border"
            android:textColor="@color/black" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/cbRememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/str_remember_my_username"
        android:textColor="@color/app_color"
        tools:checked="true"
        android:button="@drawable/check_box_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPanel" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:padding="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/str_login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/rectangle_app_color_radius_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbRememberPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin">

        <TextView
            android:id="@+id/tvFaceTouchId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:text="@string/str_face_touch_id"
            android:textColor="@color/app_color"
            app:drawableStartCompat="@drawable/ic_face_id" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/app_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>